--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "second attempt at template exercise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,7 @@
   "author": "Madeleine and Maxwell",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.14.0",
     "handlebars": "^4.0.5"
   }
 }
